--- a/proxy/Dockerfile
+++ b/proxy/Dockerfile
@@ -1,4 +1,4 @@
 FROM python:3.10-slim
 WORKDIR /app
-RUN pip install flask pandas requests
-CMD ["python", "main.py"]
+RUN pip install flask pandas requests gunicorn
+CMD ["gunicorn", "--bind", "0.0.0.0:5000", "main:app"]
