--- a/compose.yml
+++ b/compose.yml
@@ -62,9 +62,17 @@ services:
       OP_API_URL: "${OP_API_URL}"
       OP_API_KEY: "${OP_API_KEY}"
       OP_API_HOST: "localhost:8080"
+      LOG_LEVEL: "INFO"
+      LOG_FORMAT: "text"  # "json" for production
     networks:
       - op-rc-net
     stop_grace_period: 30s
+    healthcheck:
+      test: ["CMD", "python", "-c", "import requests; requests.get('http://localhost:5000/health', timeout=2).raise_for_status()"]
+      interval: 30s
+      timeout: 3s
+      start_period: 10s
+      retries: 3
 
 networks:
   op-rc-net:
